# hotel_reservation_project

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  application.py  pyproject.toml  requirements.txt  setup.py
artifacts/processed/: processed_train.csv
config/: config.yaml  paths_config.py
custom_jenkins/: Dockerfile
notebook/: notebook.ipynb
pipeline/: training_pipeline.py
src/: custom_exception.py  data_ingestion.py  data_preprocessing.py  logger.py  model_training.py
utils/: common_functions.py
